# wgpu-raytracer

./: .gitignore  Cargo.toml  Config.toml  main.rs
examples/0-one_sphere/: Config.toml  main.rs
examples/1-three_spheres/: Config.toml  main.rs
examples/2-obj_model/: Config.toml  main.rs
examples/3-gltf_model/: Config.toml  main.rs
examples/4-complex_material/: Config.toml  main.rs
examples/4-complex_material/res/: d20.gltf
examples/5-cornell_box/: Config.toml  main.rs
examples/5-cornell_box/res/: cornell_box.glb
examples/99-caution_max_scene/: Config.toml  main.rs
examples/99-caution_max_scene/res/: big_gltf_city_block.gltf
gui/: Cargo.toml
gui/src/: gui.rs  gui_denoising_settings.rs  gui_example.rs  gui_info.rs  gui_raytracing_settings.rs  gui_structure.rs  lib.rs
raytracer/: Cargo.toml
raytracer/src/: bin.rs  helper.rs  lib.rs  main.rs  renderer.rs  state.rs
raytracer/src/wgpu_utils/: buffer.rs
res/: Config.toml
res/shader/: denoising.wgsl  raygen.wgsl  screen-shader.wgsl
scene/: Cargo.toml
scene/src/: bvh.rs  camera.rs  config.rs  lib.rs  models.rs  structs.rs  texture.rs
scene/src/test_files/: image.exr
src/: bin.rs  bvh.rs  camera.rs  challenge.rs  challenge.wgsl  config.rs  denoising.wgsl  gpu.rs  gui_example.rs  lib.rs  main.rs  models.rs  raygen.wgsl  renderer.rs  screen-shader.wgsl  structs.rs  temporal-denoise.wgsl  text.json  texture.rs
src/gui/: gui.rs  gui_example.rs  mod.rs
src/wgpu_utils/: buffer.rs  gpu.rs  mod.rs
wgpu_utils/: Cargo.toml
wgpu_utils/src/: buffer.rs  gpu.rs  lib.rs
