[package]
name = "wgpu_raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = {version = "1.12", features = [ "derive" ]}
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.3"
log = "0.4"
tobj = {version = "3.2", features = ["async"]}
wgpu = {version = "0.19.3", features = ["dx12", "wgsl"]}
winit = {version = "0.29", features = ["rwh_05"] }
egui-wgpu = "0.27.1"
egui-winit = "0.27.1"
egui = "0.27.1" 
instant = "0.1"
rand = "0.8.5"
glam = "0.24.2"
rtbvh = {version = "0.6.2", features = ["serde"]}
serde = "1.0.197"
easy-gltf = "1.1.1"
egui_plot = "0.27.1"
hdrldr = "0.1"
zune-hdr = "0.4.0"

[dependencies.image]
version = "0.25.0"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = {version = "0.19.3", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[profile.dev]
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
