[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui-wgpu = "0.27.1"
egui-winit = "0.27.1"
egui = "0.27.1" 
instant = "0.1"
rand = "0.8.5"
glam = "0.27.0"
rtbvh = {version = "0.6.2", features = ["serde"]}
serde = "1.0.197"
easy-gltf = "1.1.1"
egui_plot = "0.27.1"
wgpu = "0.19.3"
winit = "0.29"

scene ={ path = "../scene" }