[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = {version = "1.12", features = ["derive"]}
cgmath = "0.18"
env_logger = "0.11.3"
pollster = "0.3"
log = "0.4"
tobj = {version = "4.0.2", features = ["async"]}
wgpu = {version = "0.19.3", features = ["dx12", "wgsl"]}
winit = {version = "0.29", features = ["rwh_05"] }
egui-wgpu = "0.27.1"
egui-winit = "0.27.1"
egui = "0.27.1" 
instant = "0.1"
rand = "0.8.5"
glam = "0.27.0"
rtbvh = {version = "0.6.2", features = ["serde"]}
serde = "1.0.197"
easy-gltf = "1.1.1"
egui_plot = "0.27.1"
hdrldr = "0.1"
zune-hdr = "0.4.0"
exr = "1.72.0"
toml = "0.8.12"

gui = { path = "../gui" }
scene = { path = "../scene" }


[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]