[package]
name = "scene"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.12", features = [ "derive" ]}
cgmath = "0.18"
wgpu = {version = "0.19.3", features = ["dx12", "wgsl"]}
winit = {version = "0.29", features = ["rwh_05"] }
glam = "0.27.0"
rtbvh = {version = "0.6.2", features = ["serde"]}
serde = "1.0.197"
easy-gltf = "1.1.1"
hdrldr = "0.1"
zune-hdr = "0.4.0"
exr = "1.72.0"
toml = "0.8.12"
rand = "0.8.5"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]