[package]
name = "wgpu_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = {version = "1.12", features = ["derive"]}
wgpu = {version = "0.19.3", features = ["dx12", "wgsl"]}
winit = {version = "0.29", features = ["rwh_05"] }
instant = "0.1"
rand = "0.8.5"
glam = "0.27.0"
rtbvh = {version = "0.6.2", features = ["serde"]}
serde = "1.0.197"

scene = { path = "../scene" }

[dev-dependencies]
pollster = "0.3"
winit-test = "0.2.0"